--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,39 @@
 /* CSS styles */
 
+body { 
+  border: lightgray solid 10px;
+}
+
+h1 {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 200%;
+}
+
+
+p {
+  color: black;  
+  background-color: white;
+}
+
+img {
+  float: right;
+  height: 300px;
+  margin: 2px;
+}
+
+ul {
+  background-color: white;
+}
+
+.purchase-button {
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 120%;
+  text-transform: uppercase;
+  border: black solid 2px;
+  border-radius: 3px;
+  background-color: white;
+  margin: 20px;
+  padding: 10px;
+}
